--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
         <ul>
           <li>Week 1. Cancelled</li>
-          <li>Week 2. Introduction to quantum algorithm</li>
+          <li>
+            Week 2. Introduction to quantum algorithm
             <ul>
               <li>
                 Speaker:
@@ -82,7 +83,9 @@
                 <a href="https://youtube.com/live/9Nem8-Up4_I" target="_blank">[video]</a>
               </li>
             </ul>
-          <li>Week 3. Grover's algorithm</li>
+          </li>
+          <li>
+            Week 3. Grover's algorithm
             <ul>
               <li>
                 Speaker:
@@ -95,7 +98,9 @@
                 <a href="https://learn.microsoft.com/en-us/azure/quantum/concepts-grovers" target="_blank">[1]</a>
               </li>
             </ul>
-          <li>Week 4. Simon's algorithm &amp; quantum Fourier transform</li>
+          </li>
+          <li>
+            Week 4. Simon's algorithm &amp; quantum Fourier transform
             <ul>
               <li>
                 Speaker:
@@ -109,7 +114,8 @@
               </li>
             </ul>
           </li>
-          <li>Week 5. Shor's algorithm</li>
+          <li>
+            Week 5. Shor's algorithm
             <ul>
               <li>
                 Speaker:
@@ -121,7 +127,9 @@
                 <a href="https://youtube.com/live/FBS0sPWCTuw" target="_blank">[video]</a>
               </li>
             </ul>
-          <li>Week 6. Quantum basics (wrap-up)</li>
+          </li>
+          <li>
+            Week 6. Quantum basics (wrap-up)
             <ul>
               <li>Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)</li>
               <li>
@@ -134,7 +142,9 @@
                 <a href="https://javafxpert.github.io/grok-bloch/" target="_blank">[4]</a>
               </li>
             </ul>
-          <li>Week 7. Quantum Finite State Automata</li>
+          </li>
+          <li>
+            Week 7. Quantum finite state automata
             <ul>
               <li>Speaker: Sicheol Sung (Yonsei University)</li>
               <li>
@@ -143,8 +153,10 @@
                 <a href="https://youtube.com/live/cfjw60TXfw8" target="_blank">[video]</a>
               </li>
             </ul>
+          </li>
           <li>Week 8. Midterm week</li>
-          <li>Week 9. Computability of Quantum Devices</li>
+          <li>
+            Week 9. Computability of quantum devices
             <ul>
               <li>Speaker: Hyunjoon Cheon (Yonsei University)</li>
               <li>
@@ -153,7 +165,19 @@
                 <a href="https://youtube.com/live/Q8-UGu_OqBo" target="_blank">[video]</a>
               </li>
             </ul>
-          <li>Week 10. TBA</li>
+          </li>
+          <li>
+            Week 10. Quantum automata cannot detect biased coins, even in the limit
+            <ul>
+              <li>Speaker: Ingyu Baek (Yonsei University)</li>
+              <li>
+                Reference:
+                <a href="202302/10.biased-coins.pdf" target="_blank">[slide]</a>,
+                <a href="https://youtube.com/live/tff4GIfbYEg" target="_blank">[video]</a>,
+                <a href="https://en.wikipedia.org/wiki/Density_matrix" target="_blank">[1]</a>
+              </li>
+            </ul>
+          </li>
           <li>Week 11. TBA</li>
           <li>Week 12. TBA</li>
           <li>Week 13. TBA</li>
