--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               </li>
             </ul>
           </li>
-          <li>Week 11. TBA</li>
+          <li>Week 11. Cancelled</li>
           <li>Week 12. TBA</li>
           <li>Week 13. TBA</li>
           <li>Week 14. TBA</li>
