--- a/index.html
+++ b/index.html
@@ -179,7 +179,17 @@
             </ul>
           </li>
           <li>Week 11. Cancelled</li>
-          <li>Week 12. TBA</li>
+          <li>
+            Week 12. Quantum computing models (wrap-up)
+            <ul>
+              <li>Speaker: SeungYeop Baik (Yonsei University)</li>
+              <li>
+                Reference:
+                <a href="202302/12.quantum-models.pdf" target="_blank">[slide]</a>,
+                <a href="https://pages.uoregon.edu/svanenk/solutions/Mixed_states.pdf" target="_blank">[1]</a>
+              </li>
+            </ul>
+          </li>
           <li>Week 13. TBA</li>
           <li>Week 14. TBA</li>
           <li>Week 15. TBA</li>
