Fix: Add weak 12 video link

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
               <li>
                 Reference:
                 <a href="202302/12.quantum-models.pdf" target="_blank">[slide]</a>,
+                <a href="https://youtube.com/live/UGfy10_Xtbo" target="_blank">[video]</a>,
                 <a href="https://pages.uoregon.edu/svanenk/solutions/Mixed_states.pdf" target="_blank">[1]</a>
               </li>
             </ul>
