--- a/index.html
+++ b/index.html
@@ -191,8 +191,28 @@
               </li>
             </ul>
           </li>
-          <li>Week 13. TBA</li>
-          <li>Week 14. TBA</li>
+          <li>
+            Week 13. Lattice-based cryptography
+            <ul>
+              <li>Speaker: Lee Hyeob (Yonsei University)</li>
+              <li>
+                Reference:
+                <a href="https://youtube.com/live/g_TnHCl3BWM" target="_blank">[video]</a>,
+                <a href="https://en.wikipedia.org/wiki/Lattice_(group)" target="_blank">[1]</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            Week 14. Quantum approximate optimization algorithm
+            <ul>
+              <li>Speaker: Gukryeol Lee (Yonsei University)</li>
+              <li>
+                Reference:
+                <a href="https://youtube.com/live/5XtGFMURnyU" target="_blank">[video]</a>,
+                <a href="https://arxiv.org/abs/1411.4028" target="_blank">[1]</a>
+              </li>
+            </ul>
+          </li>
           <li>Week 15. TBA</li>
           <li>Week 16. Final week</li>
         </ul>
