--- a/index.html
+++ b/index.html
@@ -213,7 +213,19 @@
               </li>
             </ul>
           </li>
-          <li>Week 15. TBA</li>
+          <li>
+            Week 15. Neural network meets quantum
+            <ul>
+              <li>Speaker: Shinwoo Park (Yonsei University)</li>
+              <li>
+                Reference:
+                <a href="202302/15.qauntum-neural-network.pdf" target="_blank">[slide]</a>,
+                <a href="https://youtube.com/live/3GjAufGAxBQ" target="_blank">[video]</a>,
+                <a href="https://www.youtube.com/watch?v=_M2GQAknykg" target="_blank">[1]</a>,
+                <a href="https://www.nature.com/articles/s41467-020-14454-2" target="_blank">[2]</a>
+              </li>
+            </ul>
+          </li>
           <li>Week 16. Final week</li>
         </ul>
         <hr/>
