--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
         </p>
 
         <hr/>
+        <h4>Winter 2024, Miscellaneous</h4>
+        <p>
+          Steered by <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
+        </p>
+
+        <hr/>
         <h4>Fall 2023, Quantum Computing</h4>
         <p>
           Steered by
