--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <hr/>
         <h4>Winter 2024, Miscellaneous</h4>
         <p>
-          Steered by <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
+          Organized by <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
         </p>
 
         <hr/>
         <h4>Fall 2023, Quantum Computing</h4>
         <p>
-          Steered by
+          Organized by
           SeungYeop Baik (Yonsei University),
           Sicheol Sung (Yonsei University), and
           <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
@@ -238,7 +238,7 @@
         <!-- <h3>Regular Seminar</h3> -->
 
         <h4>Spring 2023, Mechanism Design</h4>
-        <p>Steered by <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University) and Hyunjoon Cheon (Yonsei University)</p>
+        <p>Organized by <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University) and Hyunjoon Cheon (Yonsei University)</p>
         <ul>
           <li>Week 1. VCG mechanism</li>
             <ul>
