--- a/index.html
+++ b/index.html
@@ -60,10 +60,23 @@
         </p>
 
         <hr/>
-        <h4>Winter 2024, Miscellaneous</h4>
+        <h4>Winter 2024, Miscellaneous Topics</h4>
         <p>
           Organized by <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
         </p>
+        <ol>
+          <li>Asadi et al., Quantum worst-case to average-case reduction for all linear problems</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="https://arxiv.org/abs/2212.03348" target="_blank">[1]</a>                   
+            </li>
+          </ul>
+        </li>
+        </ol>
 
         <hr/>
         <h4>Fall 2023, Quantum Computing</h4>
