--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           Organized by <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
         </p>
         <ol>
+          
           <li>Asadi et al., Quantum worst-case to average-case reduction for all linear problems</li>
           <ul>
             <li>
@@ -72,10 +73,25 @@
             </li>
             <li>
               Reference:
+              <a href="2024w/01.quant-reduc.pdf" target="_blank">[note]</a>, 
+              <a href="https://youtube.com/live/7q6StukbSy8" target="_blank">[video]</a>, 
               <a href="https://arxiv.org/abs/2212.03348" target="_blank">[1]</a>                   
             </li>
           </ul>
-        </li>
+          </li>
+
+          <li>Talks from <a href="https://www.kiise.or.kr/conference/KSC/2023/" target="_blank">KSC 2023</a>
+            <ul>
+              <li>
+                Speakers: SeungYeop Baik,
+                <a href="https://renariodyne.github.io/" target="_blank">Sungmin Kim</a>,
+                and Sicheol Sung (Yonsei University)
+              </li>
+              <li>
+                Reference:
+              </li>
+            </ul>
+          </li>
         </ol>
 
         <hr/>
