--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
               </li>
               <li>
                 Reference:
+                <a href="2024w/02.unary-single.pdf" target="_blank">[slide1]</a>, 
+                <a href="2024w/02.k-letter-qfa.pdf" target="_blank">[slide2]</a>, 
+                <a href="2024w/02.simon-cong.pdf" target="_blank">[slide3]</a>, 
+                <a href="https://youtube.com/live/Q85QEftkojI" target="_blank">[video]</a> 
               </li>
             </ul>
           </li>
