--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
               </li>
             </ul>
           </li>
+          
+          <li>Quantum max-cut</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="https://youtube.com/live/x7aR4QbwfDw" target="_blank">[video]</a> 
+              <!-- <a href="https://arxiv.org/abs/2212.03348" target="_blank">[1]</a> -->
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
         <hr/>
