--- a/index.html
+++ b/index.html
@@ -104,12 +104,23 @@
             </li>
             <li>
               Reference:
-              <a href="https://youtube.com/live/x7aR4QbwfDw" target="_blank">[video]</a> 
-              <!-- <a href="https://arxiv.org/abs/2212.03348" target="_blank">[1]</a> -->
+              <a href="2024w/03.qmc.pdf" target="_blank">[slide]</a>,
+              <a href="https://youtu.be/lDQoeH9OSY4" target="_blank">[video]</a>,
+              <a href="https://doi.org/10.1137/1.9781611977554.ch48" target="_blank">[1]</a>
             </li>
           </ul>
           </li>
 
+          <li>Edge-colored clustering in hypergraphs</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="https://doi.org/10.1145/3366423.3380152" target="_blank">[1]</a>
+            </li>
+          </ul>
         </ol>
 
         <hr/>
