--- a/index.html
+++ b/index.html
@@ -118,7 +118,19 @@
             </li>
             <li>
               Reference:
-              <a href="https://doi.org/10.1145/3366423.3380152" target="_blank">[1]</a>
+              <a href="https://doi.org/10.1145/3366423.3380152" target="_blank">[1]</a>,
+              <a href="https://proceedings.mlr.press/v202/veldt23a.html" target="_blank">[2]</a>,
+              <a href="https://arxiv.org/abs/2305.17598v2" target="_blank">[3]</a>
+            </li>
+          </ul>
+          <li>Jin and Lu, First price auction is 1-e^-2 efficient</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://tamref.github.io/" target="_blank">Changki Yun</a> (SNU)
+            </li>
+            <li>
+              Reference:
+              <a href="https://dl.acm.org/doi/10.1145/3617902" target="_blank">[1]</a>
             </li>
           </ul>
         </ol>
