--- a/index.html
+++ b/index.html
@@ -130,7 +130,18 @@
             </li>
             <li>
               Reference:
+              <a href="https://youtube.com/live/g0iReVBraXo" target="_blank">[video]</a>,
               <a href="https://dl.acm.org/doi/10.1145/3617902" target="_blank">[1]</a>
+            </li>
+          </ul>
+          <li>String edit distance</li>
+          <ul>
+            <li>
+              Speaker: Ingyu Baek (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="https://en.wikipedia.org/wiki/Edit_distance" target="_blank">[1]</a>
             </li>
           </ul>
         </ol>
