--- a/index.html
+++ b/index.html
@@ -60,6 +60,30 @@
         </p>
 
         <hr/>
+        <h4>Spring 2024, Information Theory</h4>
+        <p>
+          Organized by <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> and <a href="https://renariodyne.github.io" target="_blank">Sungmin Kim</a> (Yonsei University)
+        </p>
+        <ol>
+          
+          <li>Information Theory: Phase Zero</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/01.phase-zero.pdf" target="_blank">[slide]</a>, 
+              <a href="https://youtube.com/live/Se8jxLhfnS4?feature=share" target="_blank">[video]</a>, 
+              <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/047174882X" target="_blank">[textbook chapters 2--4]</a>                   
+            </li>
+          </ul>
+          </li>
+
+        </ol>
+
+
+        <hr/>
         <h4>Winter 2024, Miscellaneous Topics</h4>
         <p>
           Organized by <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
