--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
           </ul>
           </li>
 
+          <li>Data Compression, Codes and Random Variable Generation</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://yonghoshin36.github.io/" target="_blank">Yongho Shin</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/02.source-coding.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/watch?v=igoScKHPBN0" target="_blank">[video]</a>, 
+              <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/047174882X" target="_blank">[textbook chapters 5, 6]</a>                   
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
 
