--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
           </ul>
           </li>
 
+          <li>The Channel Coding Theorem</li>
+          <ul>
+            <li>
+              Speaker: Baik Seungyeop (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/03.channel-coding.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/watch?v=eSkSPVCLv7A" target="_blank">[video]</a>, 
+              <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/047174882X" target="_blank">[textbook chapter 7]</a>                   
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
 
