--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
           </ul>
           </li>
 
+          <li>Differential Entropy and the Gaussian Channel</li>
+          <ul>
+            <li>
+              Speaker: Jin Hyundong (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/04.Gaussian-channel.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/watch?v=8asuZwgSuAQ" target="_blank">[video]</a>, 
+              <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/047174882X" target="_blank">[textbook chapters 8, 9]</a>                   
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
 
