--- a/index.html
+++ b/index.html
@@ -122,6 +122,20 @@
           </ul>
           </li>
 
+          <li>The Rate Distortion Theory</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://renariodyne.github.io/" target="_blank">Sungmin Kim</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/05.rate-distortion.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/watch?v=i6ZpomeshTg" target="_blank">[video]</a>, 
+              <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/047174882X" target="_blank">[textbook chapter 10]</a>                   
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
 
