--- a/index.html
+++ b/index.html
@@ -136,6 +136,20 @@
           </ul>
           </li>
 
+          <li>Information Theory and Statistics</li>
+          <ul>
+            <li>
+              Speaker: Seok-Ung Choi (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/06.information-theory-and-statistics.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/watch?v=OvuH_gufdxM" target="_blank">[video]</a>, 
+              <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/047174882X" target="_blank">[textbook chapter 11]</a>                   
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
 
