--- a/index.html
+++ b/index.html
@@ -150,6 +150,20 @@
           </ul>
           </li>
 
+          <li>Kolmogorov complexity</li>
+          <ul>
+            <li>
+              Speaker: Sicheol Sung (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/07.Kolmogorov-complexity.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/watch?v=4iHkzIj9kB0" target="_blank">[video]</a>, 
+              <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/047174882X" target="_blank">[textbook chapter 14]</a>                   
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
 
