--- a/index.html
+++ b/index.html
@@ -164,6 +164,19 @@
           </ul>
           </li>
 
+          <li>Recap session</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/08.Recap.pdf" target="_blank">[slides]</a>, 
+              <a href="https://www.youtube.com/watch?v=D5Z4OotbZOk" target="_blank">[video]</a>               
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
 
