--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </ul>
           </li>
 
-          <li>Kolmogorov complexity</li>
+          <li>Kolmogorov Complexity</li>
           <ul>
             <li>
               Speaker: Sicheol Sung (Yonsei University)
@@ -173,6 +173,34 @@
               Reference:
               <a href="202401/08.Recap.pdf" target="_blank">[slides]</a>, 
               <a href="https://www.youtube.com/watch?v=D5Z4OotbZOk" target="_blank">[video]</a>               
+            </li>
+          </ul>
+          </li>
+
+          <li>Kolmogorov complexity, continued</li>
+          <ul>
+            <li>
+              Speaker: Sicheol Sung (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/09.Kolmogorov-2.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/jM6St26jk5o" target="_blank">[video]</a>, 
+              <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/047174882X" target="_blank">[textbook chapter 14]</a>              
+            </li>
+          </ul>
+          </li>
+
+          <li>The Multi-Armed Bandit Problem</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/10.multi-armed-bandit.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/81wqtf3tjwY" target="_blank">[video]</a>, 
+              <a href="https://arxiv.org/abs/1904.07272" target="_blank">[Introduction to Multi-Armed Bandits (Chapters 1, 2)]</a>              
             </li>
           </ul>
           </li>
