--- a/index.html
+++ b/index.html
@@ -205,6 +205,36 @@
           </ul>
           </li>
 
+          <li>Information Theory in Practice: the JPEG Algorithm</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://renariodyne.github.io/" target="_blank">Sungmin Kim</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/11.jpeg-1.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/PEqZvHWsdRs" target="_blank">[video]</a>, 
+              <a href="https://www.sciencedirect.com/book/9780080925349/discrete-cosine-transform?via=ihub=" target="_blank">[Discrete cosine transform]</a>,
+              <a href="https://www.amazon.com/Sensation-Perception-Harvey-Richard-Schiffman/dp/0471249300" target="_blank">[Sensation and perception]</a>, 
+              <a href="https://www.ijg.org/files/Wallace.JPEG.pdf" target="_blank">[JPEG specs]</a>
+            </li>
+          </ul>
+          </li>
+
+          <li>The JPEG Algorithm, Continued / Network Coding Theory</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://renariodyne.github.io/" target="_blank">Sungmin Kim</a> (Yonsei University), <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/12.jpeg-2.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/YpfHH9ZrQdk" target="_blank">[video]</a>, 
+              <a href="https://ieeexplore.ieee.org/document/334973" target="_blank">[JPEG thresholding paper]</a>
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
 
