--- a/index.html
+++ b/index.html
@@ -60,6 +60,27 @@
         </p>
 
         <hr/>
+        <h4>Summer 2024, Miscellaneous Topics</h4>
+        <p>
+          Organized by <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> and <a href="https://renariodyne.github.io" target="_blank">Sungmin Kim</a> (Yonsei University)
+        </p>
+        <ol>
+          
+          <li>Cartesian tree edit distance</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://renariodyne.github.io" target="_blank">Sungmin Kim</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="2024s/01.Cartesian-edit-dist.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/8CZVbgDi1sQ" target="_blank">[video]</a>
+            </li>
+          </ul>
+          </li>
+        </ol>
+
+        <hr/>
         <h4>Spring 2024, Information Theory</h4>
         <p>
           Organized by <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> and <a href="https://renariodyne.github.io" target="_blank">Sungmin Kim</a> (Yonsei University)
@@ -97,7 +118,7 @@
           <li>The Channel Coding Theorem</li>
           <ul>
             <li>
-              Speaker: Baik Seungyeop (Yonsei University)
+              Speaker: Seungyeop Baik (Yonsei University)
             </li>
             <li>
               Reference:
@@ -231,6 +252,20 @@
               <a href="202401/12.jpeg-2.pdf" target="_blank">[notes]</a>, 
               <a href="https://www.youtube.com/live/YpfHH9ZrQdk" target="_blank">[video]</a>, 
               <a href="https://ieeexplore.ieee.org/document/334973" target="_blank">[JPEG thresholding paper]</a>
+            </li>
+          </ul>
+          </li>
+
+          <li>Rate-Distortion-Perception</li>
+          <ul>
+            <li>
+              Speaker: SeungYeop Baik (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202401/13.rate-distortion-perception.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/Lz7wnAY9LkI" target="_blank">[video]</a>, 
+              <a href="https://ieeexplore.ieee.org/document/9998081" target="_blank">[paper]</a>
             </li>
           </ul>
           </li>
