--- a/index.html
+++ b/index.html
@@ -78,6 +78,31 @@
             </li>
           </ul>
           </li>
+
+          <li>Universal rewriting rules for the Parikh Matrix injectivity problem</li>
+          <ul>
+            <li>
+              Speaker: Ingyu Baek</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="2024s/02.parikh-injectivity.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/RcfWd2de0pk" target="_blank">[video]</a>
+            </li>
+          </ul>
+          </li>
+
+          <li>On a generalization of iterated and randomized rounding</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://tamref.github.io/" target="_blank">Changki Yun</a> (SNU)
+            </li>
+            <li>
+              Reference:
+              <a href="https://www.youtube.com/live/pvKnO6J0F7I" target="_blank">[video]</a>
+            </li>
+          </ul>
+          </li>
         </ol>
 
         <hr/>
