--- a/index.html
+++ b/index.html
@@ -103,6 +103,31 @@
             </li>
           </ul>
           </li>
+
+          <li>Problems in Compilers</li>
+          <ul>
+            <li>
+              Speaker: Kiwoong Jung (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="https://www.youtube.com/live/YMmMtfcg1GM" target="_blank">[video]</a>
+            </li>
+          </ul>
+          </li>
+
+          <li>Introduction to VC-dimension and its applications in combinatorial problems</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://sites.google.com/view/hyoyoonlee" target="_blank">Hyoyoon Lee</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="2024s/05.vc-dimension.pdf" target="_blank">[updated notes]</a>, 
+              <a href="https://www.youtube.com/watch?v=lf7MVJ3sKU8" target="_blank">[video]</a>
+            </li>
+          </ul>
+          </li>
         </ol>
 
         <hr/>
