24 wk4 paper update

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             </li>
             <li>
               Reference:
+              <a href="https://arxiv.org/abs/1811.01597" target="_blank">[paper]</a>
               <a href="https://www.youtube.com/live/pvKnO6J0F7I" target="_blank">[video]</a>
             </li>
           </ul>
