--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
           yonsei.cs.theory.students@gmail.com.
         </p>
 
+        <h4>Fall 2024, Computational Geometry</h4>
+        <p>
+          Organized by <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> and <a href="https://renariodyne.github.io" target="_blank">Sungmin Kim</a> (Yonsei University)
+        </p>
+        <ol>
+          
+          <li>Line Segment Intersection</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://yonghoshin36.github.io/" target="_blank">Yongho Shin</a> (Yonsei University / University of Wrocław)
+            </li>
+            <li>
+              Reference:
+              <a href="202402/01-segmentIntersection.pdf" target="_blank">[slide]</a>, 
+              <a href="https://www.youtube.com/live/PTOFv70oCmc" target="_blank">[video]</a>                  
+            </li>
+          </ul>
+          </li>
+
+        </ol>
+
         <hr/>
         <h4>Summer 2024, Miscellaneous Topics</h4>
         <p>
