--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li>Line Segment Intersection</li>
           <ul>
             <li>
-              Speaker: <a href="https://yonghoshin36.github.io/" target="_blank">Yongho Shin</a> (Yonsei University / University of Wrocław)
+              Speaker: <a href="https://yonghoshin36.github.io/" target="_blank">Dr. Yongho Shin</a> (Yonsei University / University of Wrocław)
             </li>
             <li>
               Reference:
