--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <li>Introduction to VC-dimension and its applications in combinatorial problems</li>
           <ul>
             <li>
-              Speaker: <a href="https://sites.google.com/view/hyoyoonlee" target="_blank">Hyoyoon Lee</a> (Yonsei University)
+              Speaker: <a href="https://sites.google.com/view/hyoyoonlee" target="_blank">Dr. Hyoyoon Lee</a> (Yonsei University)
             </li>
             <li>
               Reference:
