--- a/index.html
+++ b/index.html
@@ -72,8 +72,34 @@
             </li>
             <li>
               Reference:
-              <a href="202402/01-segmentIntersection.pdf" target="_blank">[slide]</a>, 
+              <a href="202402/01-segmentIntersection.pdf" target="_blank">[notes]</a>, 
               <a href="https://www.youtube.com/live/PTOFv70oCmc" target="_blank">[video]</a>                  
+            </li>
+          </ul>
+          </li>
+
+          <li>Polygon Triangulation</li>
+          <ul>
+            <li>
+              Speaker: Seungyeop Baik</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202402/02-triangulation.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/pIN_cgdTZBc" target="_blank">[video]</a>                  
+            </li>
+          </ul>
+          </li>
+
+          <li>Orthogonal Range Searching</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://renariodyne.github.io" target="_blank">Sungmin Kim</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202402/03-orthogonalRangeSearch.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/yj1-m7eWTNU" target="_blank">[video]</a>                  
             </li>
           </ul>
           </li>
