--- a/index.html
+++ b/index.html
@@ -104,6 +104,47 @@
           </ul>
           </li>
 
+          <li>Klee's Measure Problem</li>
+          <ul>
+            <li>
+              Speaker: Dr. Hyunjoon Cheon (Seoul University)
+            </li>
+            <li>
+              Reference:
+              <a href="202402/04-kleeMeasureProblem.pdf" target="_blank">[slides]</a>, 
+              <a href="https://www.youtube.com/live/HbMY5u56eBk" target="_blank">[video]</a>,
+              <a href="https://epubs.siam.org/doi/10.1137/0220065" target="_blank">[paper1]</a>,
+              <a href="https://tmc.web.engr.illinois.edu/easyklee4_13.pdf" target="_blank">[paper2]</a>      
+            </li>
+          </ul>
+          </li>
+
+          <li>Voronoi Diagrams</li>
+          <ul>
+            <li>
+              Speaker: Jisun Baek (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202402/05-voronoi.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/CcwVVrk5LzU" target="_blank">[video]</a>    
+            </li>
+          </ul>
+          </li>
+
+          <li>Delaunay Triangulation</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202402/06-delaunay.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/kJ6stQ-E6RI" target="_blank">[video]</a>    
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
         <hr/>
