--- a/index.html
+++ b/index.html
@@ -145,6 +145,33 @@
           </ul>
           </li>
 
+          <li>VC-dimension and ε-nets</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://sites.google.com/view/hyoyoonlee" target="_blank">Dr. Hyoyoon Lee</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202402/07-VCdim.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.youtube.com/live/GxM__utgMEw" target="_blank">[video]</a>    
+            </li>
+          </ul>
+          </li>
+
+          <li>3SUM-hardness for problems in computational geometry</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://renariodyne.github.io/" target="_blank">Sungmin Kim</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="202402/08-3sum.pdf" target="_blank">[notes]</a>, 
+              <a href="https://www.sciencedirect.com/science/article/pii/0925772195000222" target="_blank">[paper]</a>, 
+              <a href="https://www.youtube.com/live/klvJkHtcyUo" target="_blank">[video]</a>    
+            </li>
+          </ul>
+          </li>
+
         </ol>
 
         <hr/>
