--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <li>Problems in Compilers</li>
           <ul>
             <li>
-              Speaker: Kiwoong Jung (Yonsei University)
+              Speaker: Kiung Jung (Yonsei University)
             </li>
             <li>
               Reference:
