--- a/index.html
+++ b/index.html
@@ -59,6 +59,79 @@
           yonsei.cs.theory.students@gmail.com.
         </p>
 
+        <h4>Spring 2025, Differential Privacy</h4>
+        <p>
+          Organized by <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> and <a href="https://renariodyne.github.io" target="_blank">Sungmin Kim</a> (Yonsei University)
+        </p>
+        <ol>
+          
+          <li>Basics on Differential Privacy</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="https://dl.acm.org/doi/10.1561/0400000042" target="_blank">[textbook chapters 1 ~ 3.2]</a>,
+              <a href="202501/01-basicsDP.pdf" target="_blank">[slides]</a>, 
+              <a href="https://www.youtube.com/live/b03ECPYWNp4" target="_blank">[video]</a>
+            </li>
+          </ul>
+          </li>
+
+          <li>The Laplace Mechanism and the Exponential Mechanism</li>
+          <ul>
+            <li>
+              Speaker: Hongjun Jang (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="https://dl.acm.org/doi/10.1561/0400000042" target="_blank">[textbook chapters 3.3 ~ 3.5]</a>,
+              <a href="https://www.youtube.com/live/0CQ5Co7ERQU" target="_blank">[video]</a>
+            </li>
+          </ul>
+          </li>
+
+        </ol>
+
+        <hr/>
+
+        <h4>Winter 2025, Miscellaneous Topics</h4>
+        <p>
+          Organized by <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> and <a href="https://renariodyne.github.io" target="_blank">Sungmin Kim</a> (Yonsei University)
+        </p>
+        <ol>
+          
+          <li>Sum-of-Squares Algorithm</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="2025w/01.Sum-of-Squares.pdf" target="_blank">[slides]</a>, 
+              <a href="https://www.youtube.com/live/r-9UIrlgOXY" target="_blank">[video]</a>
+            </li>
+          </ul>
+          </li>
+
+          <li>PAC Learning, Transductive Learning and Bipartite Matching</li>
+          <ul>
+            <li>
+              Speaker: <a href="https://yonghoshin36.github.io/" target="_blank">Dr. Yongho Shin</a> (Yonsei University)
+            </li>
+            <li>
+              Reference:
+              <a href="https://arxiv.org/abs/2502.00607" target="_blank">[paper]</a>, 
+              <a href="https://www.youtube.com/live/YUkdQr--82w" target="_blank">[video]</a>
+            </li>
+          </ul>
+          </li>
+
+        </ol>
+
+        <hr/>
+
         <h4>Fall 2024, Computational Geometry</h4>
         <p>
           Organized by <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> and <a href="https://renariodyne.github.io" target="_blank">Sungmin Kim</a> (Yonsei University)
@@ -260,7 +333,7 @@
             </li>
             <li>
               Reference:
-              <a href="202401/01.phase-zero.pdf" target="_blank">[slide]</a>, 
+              <a href="202401/01.phase-zero.pdf" target="_blank">[slides]</a>, 
               <a href="https://youtube.com/live/Se8jxLhfnS4?feature=share" target="_blank">[video]</a>, 
               <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/047174882X" target="_blank">[textbook chapters 2--4]</a>                   
             </li>
